// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelInstanceDocumentHandler applies anchor commit correctly 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 123456,
    "blockTimestamp": 1615799679,
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": Object {
    "myData": 1,
  },
  "log": Array [
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          115,
          137,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "timestamp": 1615799679,
      "type": 1,
    },
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          123,
          201,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "code": 133,
        "hash": Uint8Array [
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
      Symbol(__memoized_map__): Map {
        StreamID {
          "_cid": Object {
            "code": 133,
            "hash": Uint8Array [
              18,
              32,
              254,
              59,
              179,
              120,
              248,
              223,
              82,
              5,
              123,
              54,
              25,
              154,
              139,
              124,
              30,
              134,
              76,
              17,
              14,
              173,
              145,
              64,
              12,
              116,
              182,
              237,
              174,
              21,
              26,
              225,
              122,
              247,
            ],
            "version": 1,
          },
          "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
          "_type": 2,
        } => "kjzl6hvfrbw6cbclh3fplllid7yvf18w05xw41wvuf9b4lk6q9jkq7d1o01wg6v",
      },
      Symbol(__memoized_map__): Map {
        StreamID {
          "_cid": Object {
            "code": 133,
            "hash": Uint8Array [
              18,
              32,
              254,
              59,
              179,
              120,
              248,
              223,
              82,
              5,
              123,
              54,
              25,
              154,
              139,
              124,
              30,
              134,
              76,
              17,
              14,
              173,
              145,
              64,
              12,
              116,
              182,
              237,
              174,
              21,
              26,
              225,
              122,
              247,
            ],
            "version": 1,
          },
          "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
          "_type": 2,
        } => Uint8Array [
          206,
          1,
          2,
          1,
          133,
          1,
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
      },
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 0,
  },
  "log": Array [
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "code": 133,
        "hash": Uint8Array [
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies deterministic genesis commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {},
  "log": Array [
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "code": 133,
        "hash": Uint8Array [
          18,
          32,
          171,
          140,
          65,
          23,
          15,
          226,
          112,
          36,
          83,
          226,
          130,
          210,
          139,
          173,
          248,
          100,
          216,
          137,
          58,
          232,
          85,
          47,
          140,
          161,
          87,
          85,
          31,
          47,
          0,
          162,
          104,
          142,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies genesis commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 0,
  },
  "log": Array [
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "code": 133,
        "hash": Uint8Array [
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies signed commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 1,
  },
  "log": Array [
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          115,
          137,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "code": 133,
        "hash": Uint8Array [
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
      Symbol(__memoized_map__): Map {
        StreamID {
          "_cid": Object {
            "code": 133,
            "hash": Uint8Array [
              18,
              32,
              254,
              59,
              179,
              120,
              248,
              223,
              82,
              5,
              123,
              54,
              25,
              154,
              139,
              124,
              30,
              134,
              76,
              17,
              14,
              173,
              145,
              64,
              12,
              116,
              182,
              237,
              174,
              21,
              26,
              225,
              122,
              247,
            ],
            "version": 1,
          },
          "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
          "_type": 2,
        } => "kjzl6hvfrbw6cbclh3fplllid7yvf18w05xw41wvuf9b4lk6q9jkq7d1o01wg6v",
      },
      Symbol(__memoized_map__): Map {
        StreamID {
          "_cid": Object {
            "code": 133,
            "hash": Uint8Array [
              18,
              32,
              254,
              59,
              179,
              120,
              248,
              223,
              82,
              5,
              123,
              54,
              25,
              154,
              139,
              124,
              30,
              134,
              76,
              17,
              14,
              173,
              145,
              64,
              12,
              116,
              182,
              237,
              174,
              21,
              26,
              225,
              122,
              247,
            ],
            "version": 1,
          },
          "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
          "_type": 2,
        } => Uint8Array [
          206,
          1,
          2,
          1,
          133,
          1,
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
      },
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler multiple consecutive updates 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 2,
  },
  "log": Array [
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          115,
          137,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 1,
    },
    Object {
      "cid": Object {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          119,
          169,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "code": 133,
        "hash": Uint8Array [
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
      Symbol(__memoized_map__): Map {
        StreamID {
          "_cid": Object {
            "code": 133,
            "hash": Uint8Array [
              18,
              32,
              254,
              59,
              179,
              120,
              248,
              223,
              82,
              5,
              123,
              54,
              25,
              154,
              139,
              124,
              30,
              134,
              76,
              17,
              14,
              173,
              145,
              64,
              12,
              116,
              182,
              237,
              174,
              21,
              26,
              225,
              122,
              247,
            ],
            "version": 1,
          },
          "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
          "_type": 2,
        } => "kjzl6hvfrbw6cbclh3fplllid7yvf18w05xw41wvuf9b4lk6q9jkq7d1o01wg6v",
      },
      Symbol(__memoized_map__): Map {
        StreamID {
          "_cid": Object {
            "code": 133,
            "hash": Uint8Array [
              18,
              32,
              254,
              59,
              179,
              120,
              248,
              223,
              82,
              5,
              123,
              54,
              25,
              154,
              139,
              124,
              30,
              134,
              76,
              17,
              14,
              173,
              145,
              64,
              12,
              116,
              182,
              237,
              174,
              21,
              26,
              225,
              122,
              247,
            ],
            "version": 1,
          },
          "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
          "_type": 2,
        } => Uint8Array [
          206,
          1,
          2,
          1,
          133,
          1,
          18,
          32,
          254,
          59,
          179,
          120,
          248,
          223,
          82,
          5,
          123,
          54,
          25,
          154,
          139,
          124,
          30,
          134,
          76,
          17,
          14,
          173,
          145,
          64,
          12,
          116,
          182,
          237,
          174,
          21,
          26,
          225,
          122,
          247,
        ],
      },
    },
  },
  "signature": 2,
  "type": 3,
}
`;
